fix syntax error

--- a/fn_lib_rebar.config
+++ b/fn_lib_rebar.config
@@ -4,7 +4,7 @@
 
 {plugins, [
     {rebar3_efene_compile, {git, "https://github.com/efene/rebar3_efene_compile.git", {branch, "master"}}},
-    {rebar3_efene_ct, {git, "https://github.com/efene/rebar3_efene_ct.git", {branch, "master"}}},
+    {rebar3_efene_ct, {git, "https://github.com/efene/rebar3_efene_ct.git", {branch, "master"}}}
 ]}.
 
 {provider_hooks, [
