--- a/fn_lib_rebar.config
+++ b/fn_lib_rebar.config
@@ -1,12 +1,6 @@
 {erl_opts, [debug_info]}.
-{deps, [
-]}.
+{deps, []}.
 
-{plugins, [
-    {rebar3_efene_compile, {git, "https://github.com/efene/rebar3_efene_compile.git", {branch, "master"}}},
-    {rebar3_efene_ct, {git, "https://github.com/efene/rebar3_efene_ct.git", {branch, "master"}}}
-]}.
+{plugins, [rebar3_efene_compile, rebar3_efene_ct]}.
 
-{provider_hooks, [
-    {pre, [{ct, {efene, ct}}, {compile, {efene, compile}}]}
-]}.
+{provider_hooks, [{pre, [{ct, {efene, ct}}, {compile, {efene, compile}}]}]}.
