use rebar3_efene plugin

--- a/fn_lib_rebar.config
+++ b/fn_lib_rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
 
-{plugins, [rebar3_efene_compile, rebar3_efene_ct]}.
+{plugins, [rebar3_efene]}.
 
 {provider_hooks, [{pre, [{ct, {efene, ct}}, {compile, {efene, compile}}]}]}.
